--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 <b>brisson brewing</b>
+This is a test!
+<img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
