--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<b>brisson brewing</b>
-<i>This is a test!</i>
-
+<b>brisson brewing</b><p>
+<i>This is a test!</i><p>
+<img src="https://github.com/brissonbrewingco/image/blob/master/BBCO-OFFICIAL-LOGO-2-17-17.png">
