--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
-<b>brisson brewing</b><p>
-<i>This is a test!</i><p>
-<img src="https://i.imgur.com/4itVvlF.png">
+<center><img src="https://i.imgur.com/4itVvlF.png"></center><p><p><p><p>
+  <font size="10" face="book antiqua"><b>Coming soon...<b></font>
