--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <center><img src="https://i.imgur.com/4itVvlF.png"></center><p><p><p><p>
-  <font size="10" face="book antiqua"><b>Coming soon...<b></font>
+  <font size="10" face="book antiqua"><b><center>Coming soon...</center><b>
