--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <center><img src="https://i.imgur.com/4itVvlF.png"></center><p><p><p><p>
-  <font size="8" face="book antiqua"><b><center>Coming soon...</center><b>
+  <font size="9" face="book antiqua"><b><center>COMING SOON...</center><b>
