--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<center><img src="https://i.imgur.com/4itVvlF.png" height="40%" width="40%"></center><p><p><p><p>
+<center><img src="https://i.imgur.com/4itVvlF.png" height="350" width="350"></center><p><p><p><p>
   <font size="9" face="book antiqua"><b><center>COMING SOON...</center><b>
