--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
-<center><img src="https://i.imgur.com/4itVvlF.png" height="350" width="350"></center><p><p><p><p>
-  <font size="9" face="book antiqua"><b><center>COMING SOON...</center><b>
+<table width="30%" border="1" align="center" cellpadding="3">
+<tr>
+<td>
+<center>
+<img src="https://i.imgur.com/4itVvlF.png" height="350" width="350">
+</center>
+</tr>
+<tr>
+<td>
+<p>
+<p>
+<p>
+<font size="3" face="times new roman">
+<left>
+<b>Brisson Brewing Company<b> is the name of my home brewery. This is just a place-holder while I figure out how web development works!
+<p>
+Cheers!
