--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <p>
 <font size="3" face="times new roman">
 <left>
-<b>Brisson Brewing Company<b> is the name of my home brewery. This is just a place-holder while I figure out how web development works!
+<b>Brisson Brewing Company</b> is the name of my home brewery. This is just a place-holder while I figure out how web development works!
 <p>
 Cheers!
